# basement

./: .env.example  .env.local  .gitignore  .htaccess  .vercel-env-setup.txt  ALL_ERRORS_FIXED.md  ALL_FIXED_FINAL.md  APPKIT_INTEGRATION_GUIDE.md  ARCADE_FIXES_COMPLETE.md  ARCADE_GAMES_IMPROVEMENTS.md  ARCADE_GAMES_UPDATE.md  ARCADE_README.md  ARCADE_READY.md  BASEMENT_TOKEN_UPDATES_COMPLETE.md  BASE_ONCHAINKIT_SETUP.md  BLOCKCHAIN_SYNCED_TIMER.md  CDN_FIX_APPLIED.md  CHANNEL_CREATION_SYSTEM.md  CHANNEL_CREATION_UPDATE.md  CHAT_INPUT_STREAMLINED.md  CHAT_TROUBLESHOOTING.md  CHECK_DATABASE.md  CHESS_ACTUAL_FUNCTIONALITY.md  CHESS_FIXED_COMPLETE.md  CHESS_RULES_FIXED.md  CLEANUP_SUMMARY.md  CLEANUP_UNUSED_DEPS.md  CLEAN_SERVER_SUCCESS.md  COMPLETE_ENHANCEMENT_SUMMARY.md  COMPLETE_IMPROVEMENTS_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  COMPLETION_SUMMARY.md  CONNECT4_VISUAL_OVERHAUL.md  CPU_DEMO_MODE.md  CSP_FIX.md  DATABASE_MIGRATION_GUIDE.md  DEMO_MODE_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  (+105 more)
.next/: app-build-manifest.json  prerender-manifest.json  routes-manifest.json  trace
.vercel/: project.json
app/: globals.css  layout.tsx  onchainkit.css  page.tsx  providers.tsx
arcade/: README.md  TESTING.md  arcade.css  arcade.html  arcade.js  cointoss.html  connect4-game.html  index.html  package.json  tsconfig.json  vite.config.ts  war-game.html
chain/: .gitignore  hardhat.config.ts  package.json  tsconfig.json
config/: index.tsx
solana/programs/cointoss/: Cargo.toml  lib.rs
solana/programs/luckyblock/: Cargo.toml  lib.rs
(+180 files in other folders)
